--- a/article.css
+++ b/article.css
@@ -43,15 +43,33 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-p + ul li{
+p + ol li{
   font-family: sans-serif;
   color: #555;
   font-size: 20px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   border-left: 5px solid #ececec;
-  list-style-type: none;
+  list-style-type: decimal-leading-zero;
   padding-left: 10px;
+}
+p + ol li {
+  font-size: 20px;
+}
+p + ul li{
+  font-family: sans-serif;
+  color: #555;
+  font-size: 20px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  list-style: none;
+  padding-left: 10px;
+}
+p + ul li:before {
+  content: "•";
+  color: #ececec;
+  font-size: 170%; /* or whatever */
+  padding-right: 5px;
 }
 div#code{
   height: 40vh;
